@@ -5,9 +5,9 @@ import java.text.SimpleDateFormat
 plugins {
     id "java"
     id "idea"
-    id "de.undercouch.download" version "5.6.0"
+    id "de.undercouch.download" version "5.7.0"
     id 'edu.sc.seis.launch4j' version '4.0.0'
-    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4.1'
 }
 
 repositories {
@@ -29,7 +29,7 @@ tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -108,12 +108,12 @@ dependencies {
     implementation fileTree(dir: 'lib', include: ['*.jar'])
 
     // from maven
-    implementation "commons-io:commons-io:2.21.0"
+    implementation "commons-io:commons-io:2.22.0"
     implementation "org.apache.commons:commons-lang3:3.20.0"
     implementation "org.apache.commons:commons-text:1.15.0"
-    implementation "org.apache.logging.log4j:log4j-core:2.25.3"
+    implementation "org.apache.logging.log4j:log4j-core:2.25.4"
     implementation "org.freemarker:freemarker:2.3.34"
-    implementation("com.google.code.gson:gson:2.13.2") {
+    implementation("com.google.code.gson:gson:2.14.0") {
         dep -> dep.exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
     }
     implementation "com.github.sps.junidecode:junidecode:0.3"
@@ -121,34 +121,37 @@ dependencies {
     implementation "org.jboss.forge.roaster:roaster-jdt:2.31.0.Final"
     implementation "org.snakeyaml:snakeyaml-engine:3.0.1"
     implementation "org.reflections:reflections:0.10.2"
-    implementation "com.google.guava:guava:33.5.0-jre"
+    implementation "com.google.guava:guava:33.6.0-jre"
     implementation "de.javagl:obj:0.4.0"
     implementation "com.univocity:univocity-parsers:2.9.1"
     implementation "org.slf4j:slf4j-nop:2.0.17"
-    implementation "org.gradle:gradle-tooling-api:9.3.1"
+    implementation "org.gradle:gradle-tooling-api:9.4.1"
     implementation "net.java.balloontip:balloontip:1.2.4.1"
     implementation "com.atlassian.commonmark:commonmark:0.17.0"
     implementation "com.atlassian.commonmark:commonmark-ext-autolink:0.17.0"
     implementation "com.atlassian.commonmark:commonmark-ext-gfm-tables:0.17.0"
-    implementation "com.fifesoft:rsyntaxtextarea:3.6.1"
+    implementation "com.fifesoft:rsyntaxtextarea:3.6.2"
     implementation "com.fifesoft:autocomplete:3.3.3"
     implementation("com.fifesoft:languagesupport:3.4.1") {
         dep -> dep.exclude group: 'org.mozilla', module: 'rhino-all'
     }
+    implementation 'io.beautifier:js-beautify:1.15.4.1'
+    implementation 'io.github.furrrlo:unique4j:2.1.0'
+    implementation 'io.github.furrrlo:unique4j-unix-socket-channel:2.1.0'
     implementation "net.java.dev.jna:jna:5.18.1" // needed by discord-rpc.jar
 
     implementation "com.github.weisj:jsvg:2.0.0"
-    implementation "com.formdev:flatlaf:3.7:no-natives"
-    implementation("com.formdev:flatlaf-extras:3.7") {
+    implementation "com.formdev:flatlaf:3.7.1:no-natives"
+    implementation("com.formdev:flatlaf-extras:3.7.1") {
         dep -> exclude group: 'com.formdev', module: 'flatlaf'
     }
-    win64 "com.formdev:flatlaf:3.7:windows-x86_64@dll"
-    macX64 "com.formdev:flatlaf:3.7:macos-x86_64@dylib"
-    macAarch64 "com.formdev:flatlaf:3.7:macos-arm64@dylib"
-    linux64 "com.formdev:flatlaf:3.7:linux-x86_64@so"
+    win64 "com.formdev:flatlaf:3.7.1:windows-x86_64@dll"
+    macX64 "com.formdev:flatlaf:3.7.1:macos-x86_64@dylib"
+    macAarch64 "com.formdev:flatlaf:3.7.1:macos-arm64@dylib"
+    linux64 "com.formdev:flatlaf:3.7.1:linux-x86_64@so"
 
     // test dependencies
-    testImplementation platform("org.junit:junit-bom:6.0.2")
+    testImplementation platform("org.junit:junit-bom:6.0.3")
     testImplementation "org.junit.jupiter:junit-jupiter"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
@@ -156,7 +159,7 @@ dependencies {
 test {
     useJUnitPlatform()
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     // default max heap is VM RAM / 4, which may be too low on low RAM VMs
     maxHeapSize = "4096m"
@@ -185,12 +188,14 @@ javadoc {
     classpath = configurations.runtimeClasspath
 
     options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('tag', 'apiNote:a:API note:')
+    options.addStringOption('tag', 'implNote:a:Implementation note:')
 }
 
 tasks.register('runMCreator', JavaExec.class) {
     dependsOn jar
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     classpath += sourceSets.main.runtimeClasspath
 
